# FluidX3D

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  Contributors.md  DOCUMENTATION.md  FluidX3D.sln  FluidX3D.vcxproj  LICENSE.md  Makefile  README.md  UpgradeLog.htm  make.sh  makefile
src/: CMakeLists.txt  defines.hpp  graphics.cpp  graphics.hpp  info.cpp  info.hpp  kernel.cpp  kernel.hpp  lbm.cpp  lbm.hpp  lodepng.cpp  lodepng.hpp  main.cpp  opencl.hpp  resource.rc  setup.cpp  setup.hpp  shapes.cpp  shapes.hpp  units.hpp  utilities.hpp
src/OpenCL/include/CL/: cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h  opencl.hpp
src/OpenCL/lib/: OpenCL.lib
src/X11/include/X11/: keysymdef.h
src/X11/include/X11/extensions/: XKB.h  XKBstr.h
stl/: b52.stl
temp/: FluidX3D.exe.recipe  resource.res
temp/FluidX3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FluidX3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
